Adicionada animação, agora o card flipa

--- a/viagens.html
+++ b/viagens.html
@@ -39,6 +39,9 @@
                     <p class="card-title">Caça ao Pacífico!</p>
                     <p class="card-text">01/02/2024</p>
                     <img class="card-img" src="./src/images/seavax.jpg" alt="foto da embarcação">
+                    <div class="card-description">
+                        <p>Descrição detalhada da embarcação e da viagem...</p>
+                    </div>
                     <p class="card-text">Ja terminou</p>
                     <p class="card-subtext">embarcação SeaVex</p>
                     <button class="btn-delete">
