--- a/viagens.html
+++ b/viagens.html
@@ -6,6 +6,8 @@
     <title>Ocean Labs</title>
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/viagens.css">
+    <script src="./src/js/carregar.js" defer></script>
+    <script src="./src/js/metodos.js" defer></script>
 </head>
 <body>
 
@@ -26,7 +28,7 @@
                 <label for="filtro">Filtro:</label>
                 <input type="text" name="filtro" id="filtro-busca" class="filtro">
 
-                <select name="filtro-embarcacao" id="filtro-embarcacao" class="filtro">
+                <select name="filtro-modelo" id="filtro-modelo" class="filtro">
                     <option value="">Nenhum</option>
                     <option value="SeaVex">SeaVex</option>
                     <option value="Interceptron">Interceptron</option>
@@ -34,23 +36,6 @@
             </div>
 
             <div class="cards-section">
-
-                <div class="card">
-                    <p class="card-title">Caça ao Pacífico!</p>
-                    <p class="card-text">01/02/2024</p>
-                    <img class="card-img" src="./src/images/seavax.jpg" alt="foto da embarcação">
-                    <div class="card-description">
-                        <p>Descrição detalhada da embarcação e da viagem...</p>
-                    </div>
-                    <p class="card-text">Ja terminou</p>
-                    <p class="card-subtext">embarcação SeaVex</p>
-                    <button class="btn-delete">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                        </svg>
-                    </button>
-                </div>
 
             </div>
 
