Filtro com indicação, e botão relatório removido

--- a/viagens.html
+++ b/viagens.html
@@ -25,9 +25,10 @@
             <h1>Nossas Viagens Agendadas</h1>
 
             <div class="filtro-container">
-                <label for="filtro">Filtro:</label>
+                <label for="filtro">Busca:</label>
                 <input type="text" name="filtro" id="filtro-busca" class="filtro">
 
+                <label for="filtro-modelo">Filtro:</label>
                 <select name="filtro-modelo" id="filtro-modelo" class="filtro">
                     <option value="">Nenhum</option>
                     <option value="SeaVex">SeaVex</option>
@@ -41,7 +42,6 @@
 
             <div class="btns-section">
                 <a href="./cadastro.html"><button class="btn-light">Nova Viagem</button></a>
-                <a href=""><button class="btn-dark">Relatório</button></a>
             </div>
         </div>
     </main>
